# mdscuda

./: LICENSE  Makefile  README.md  benchmarks.txt  example.py  example_digits.py  example_digits_gif.py  example_iris.py  example_khan.py  example_random.py  mds.py  minkowski.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_mds.py  test_minkowski.py
mdscuda/: __init__.py  example.py  example_digits.py  example_digits_gif.py  example_iris.py  khan_train_y.csv  mds.py  minkowski.py  utils.py
mdscuda/plots/: digits-mdscuda.html  digits-sklearn.html  iris-mdscuda.html  iris-sklearn.html  khan-mdscuda.html  khan-sklearn.html
