[metadata]
name = mdscuda
version = 0.1.0
author = Seth Baldwin
author_email = seth.e.baldwin@gmail.com
description = CUDA implementation of Multidimensional Scaling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SethEBaldwin/mdscuda
project_urls =
    Bug Tracker = https://github.com/SethEBaldwin/mdscuda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .